--- a/english_cardiopodkategorije.html
+++ b/english_cardiopodkategorije.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
   <link rel="stylesheet" href="podkategorije-style.css">
+  <link rel="stylesheet" href="css/rating.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -108,6 +109,11 @@
                   <div class="progress">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 25%"></div>
                     </div>
+                    <br>
+                    <div data-training="TRCANJE" style="font-size: 2em" data-type="rating">4.7</div>
+                  <div class="rating" data-training="TRCANJE" style="font-size: 2em">
+                    <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -136,7 +142,6 @@
           <a class="right" onclick="nextSlide(1)">❯</a>  
         </div>
       </div>
-
       <a href="#TRCANJEkomentari" data-toggle="collapse"><div class="card-header"><div style="display: inline;">Comments</div>&nbsp<div data-type="loginAlert" style="display: inline; color: red;">(Log in to leave a comment!)</div></div></a>
       <div id="TRCANJEkomentari" class="collapse card-body">
         <div data-type="komentari" data-training="TRCANJE"></div>
@@ -173,6 +178,11 @@
                   <div class="progress">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
                     </div>
+                    <br>
+                  <div data-training="BICIKL" style="font-size: 2em" data-type="rating">4.7</div>
+                  <div class="rating" data-training="BICIKL" style="font-size: 2em">
+                    <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -238,6 +248,11 @@
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
                   </div>
+                  <br>
+                <div data-training="STEPENICE" style="font-size: 2em" data-type="rating">4.7</div>
+                <div class="rating" data-training="STEPENICE" style="font-size: 2em">
+                  <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                </div>
               </div>
             </div>
           </div>
