--- a/english_corepodkategorije.html
+++ b/english_corepodkategorije.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css">
   <link rel="stylesheet" href="podkategorije-style.css">
+  <link rel="stylesheet" href="css/rating.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -110,6 +111,11 @@
                   <div class="progress">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
                     </div>
+                    <br>
+                  <div data-training="KLASIKC" style="font-size: 2em" data-type="rating">4.7</div>
+                  <div class="rating" data-training="KLASIKC" style="font-size: 2em">
+                    <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -175,6 +181,11 @@
                   <div class="progress">
                       <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
                     </div>
+                    <br>
+                    <div data-training="HIIT" style="font-size: 2em" data-type="rating">4.7</div>
+                    <div class="rating" data-training="HIIT" style="font-size: 2em">
+                      <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                    </div>
                 </div>
               </div>
             </div>
@@ -239,6 +250,11 @@
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
                   </div>
+                <br>
+                <div data-training="KRUZNI" style="font-size: 2em" data-type="rating">4.7</div>
+                <div class="rating" data-training="KRUZNI" style="font-size: 2em">
+                  <span data-type="star" data-starindex="5">☆</span><span data-type="star" data-starindex="4">☆</span><span data-type="star" data-starindex="3">☆</span><span data-type="star" data-starindex="2">☆</span><span data-type="star" data-starindex="1">☆</span>
+                </div>
               </div>
             </div>
           </div>
