--- a/Nutricionista.html
+++ b/Nutricionista.html
@@ -269,9 +269,9 @@
           </div>
           <button class="btn btn-success" id="potvrdaForme">Zakazi</button>
         </div>
-        
-      </div>
+      </form>
     </div>
+  </div>
   </div>
    <!-- Scripts -->
    <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
