--- a/english_nutricionista.html
+++ b/english_nutricionista.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/modal.css">
   <script src="js/storagePrimer.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/jspdf.min.js"></script>
+  <script src="js/jspdf.plugin.autotable.js"></script>
+  <script src="js/savePDF.js"></script>
 
 </head>
 <body>
@@ -245,32 +248,34 @@
       <h2>Make an appointment</h2>
       <a class="close" href="#">&times;</a>
       <div class="content">
-        <div class="form-group">
-          <label for="formName">Name</label>
-          <input type="text" class="form-control" placeholder="Enter a name" id="formName">
+        <form name="onlyForm">
+          <div class="form-group">
+            <label for="formName">Name</label>
+            <input type="text" class="form-control" placeholder="Enter a name" id="formName">
+          </div>
+          <div class="form-group">
+            <label for="formSurname">Surname</label>
+            <input type="text" class="form-control" placeholder="Enter last name" id="formSurname">
+          </div>
+          <div class="form-group">
+            <label for="formMail">Email</label>
+            <input type="email" class="form-control" id="formMail" aria-describedby="emailHelp" placeholder="Enter the address">
+          </div>
+          <div class="form-group">
+            <label for="formNumber">Contact mobile phone</label>
+            <input type="text" class="form-control" placeholder="Enter the number" id="formNumber">
+          </div>
+          <div class="form-group">
+            <label for="formDate">Date of term</label>
+            <input type="date" class="form-control" id="formDate" min="2020-01-01" max="2021-12-31">
+          </div>
+          <div class="form-group">
+            <label for="opisProblema">Brief description of the problem</label>
+            <textarea class="form-control" id="opisProblema" rows="3"></textarea>
+          </div>
+          <button class="btn btn-success" id="potvrdaForme">Make an appointment</button>
         </div>
-        <div class="form-group">
-          <label for="formSurname">Surname</label>
-          <input type="text" class="form-control" placeholder="Enter last name" id="formSurname">
-        </div>
-        <div class="form-group">
-          <label for="formMail">Email</label>
-          <input type="email" class="form-control" id="formMail" aria-describedby="emailHelp" placeholder="Enter the address">
-        </div>
-        <div class="form-group">
-          <label for="formNumber">Contact mobile phone</label>
-          <input type="text" class="form-control" placeholder="Enter the number" id="formNumber">
-        </div>
-        <div class="form-group">
-          <label for="formDate">Date of term</label>
-          <input type="date" class="form-control" id="formDate" min="2020-01-01" max="2021-12-31">
-        </div>
-        <div class="form-group">
-          <label for="opisProblema">Brief description of the problem</label>
-          <textarea class="form-control" id="opisProblema" rows="3"></textarea>
-        </div>
-        <button class="btn btn-success" id="potvrda">Make an appointment</button>
-      </div>
+      </form>
     </div>
   </div>
    <!-- Scripts -->
