--- a/english_masaze.html
+++ b/english_masaze.html
@@ -334,39 +334,39 @@
 
 <div id="popup1" class="overlay">
   <div class="popup modal-content">
-    <h2>Zakazite termin</h2>
+    <h2>Make an appointment</h2>
     <a class="close" href="#">&times;</a>
     <div class="content">
       <form name="onlyForm">
         <div class="form-group">
-          <label for="formName">Ime</label>
-          <input type="text" class="form-control" placeholder="Unesite ime" id="formName">
+          <label for="formName">Name</label>
+          <input type="text" class="form-control" placeholder="Enter a name" id="formName">
         </div>
         <div class="form-group">
-          <label for="formSurname">Prezime</label>
-          <input type="text" class="form-control" placeholder="Unesite prezime" id="formSurname">
+          <label for="formSurname">Surname</label>
+          <input type="text" class="form-control" placeholder="Enter last name" id="formSurname">
         </div>
         <div class="form-group">
           <label for="formMail">Email</label>
-          <input type="email" class="form-control" id="formMail" aria-describedby="emailHelp" placeholder="Unesite adresu">
+          <input type="email" class="form-control" id="formMail" aria-describedby="emailHelp" placeholder="Enter the address">
         </div>
         <div class="form-group">
-          <label for="formNumber">Kontakt telefon</label>
-          <input type="text" class="form-control" placeholder="Unesite broj" id="formNumber">
+          <label for="formNumber">Contact mobile phone</label>
+          <input type="text" class="form-control" placeholder="Enter the number" id="formNumber">
         </div>
         <div class="form-group">
-          <label for="formDate">Datum termina</label>
+          <label for="formDate">Date of term</label>
           <input type="date" class="form-control" id="formDate" min="2020-01-01" max="2021-12-31">
         </div>
         <div class="form-group">
-          <label for="opisProblema">Tip masaže</label>
+          <label for="opisProblema">Massage type</label>
           <textarea class="form-control" id="opisProblema" rows="3"></textarea>
         </div>
-        <button class="btn btn-success" id="potvrdaForme">Zakazi</button>
+        <button class="btn btn-success" id="potvrdaForme">Make an appointment</button>
       </div>
-      
-    </div>
+    </form>
   </div>
+</div>
 
  <!-- Scripts -->
  <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
