--- a/english_index.html
+++ b/english_index.html
@@ -118,8 +118,9 @@
                             <h1>IRON GYM <br> GYM FOR<br> <span id="js-rotating" style="color:#F48B07">BEGINNERS AND RECREATIONALISTS, PROFESSIONALS AND COMPETITORS </span></h1>
                             <p class="p-large">
                                 Take responsibility for your body. The key to life change is consistency, the key to consistency is motivation, and the key to motivation is your goal.</p>
-                            <a class="btn-solid-lg page-scroll" href="#your-link"style="background-color:#F48B07; border:#F48B07;">TRAININGS</a>
-                            <a class="btn-solid-lg page-scroll" href="#your-link"style="background-color:#F48B07;border:#F48B07;">MY ACCOUNT</a>
+                                <a href="Treninzi.html"><button type="button" class="btn btn-success">TRAININGS</button></a>
+                                <a href="Nutricionista.html"><button type="button" class="btn btn-danger">NUTRITIONIST</button></a>
+                                <a href="Masaze.html"><button type="button" class="btn btn-warning">MASAGE</button></a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -569,9 +570,6 @@
                         <li>
                         <a href="english_treninzi.html">List of trainings</a>
                         </li>
-                        <li>
-                        <a href="">My account</a>
-                        </li>
                         </ul>
                     </div>
                 </div>        
@@ -583,7 +581,7 @@
                 <h5 class="mb-1">Register for free!</h5>
               </li>
               <li class="list-inline-item">
-                <a href="#!" class="btn btn-danger btn-rounded">SIGN UP</a>
+                <a href="english_register.html" class="btn btn-danger btn-rounded">SIGN UP</a>
               </li>
             </ul>       
             <hr>
