--- a/english_treninzi.html
+++ b/english_treninzi.html
@@ -20,13 +20,13 @@
     
       <div class="collapse navbar-collapse" id="navbarColor01" style="background-color: #1D1E22">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="english_index.html">Home page<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Trainings</a>
               <div class="dropdown-menu" style="">
-              <a class="dropdown-item" href="english_treninzi.html">Training list</a>
+              <a class="dropdown-item active" href="english_treninzi.html">Training list</a>
               <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="english_yogapodkategorije.html">Yoga</a>
                 <a class="dropdown-item" href="english_pilatespodkategorije.html">Pilates</a>
@@ -158,9 +158,7 @@
                     <li>
                     <a href="english_treninzi.html">List of trainings</a>
                     </li>
-                    <li>
-                    <a href="">My account</a>
-                    </li>
+                   
                     </ul>
                 </div>
             </div>        
@@ -172,7 +170,7 @@
             <h5 class="mb-1">Register for free!</h5>
           </li>
           <li class="list-inline-item">
-            <a href="#!" class="btn btn-danger btn-rounded">SIGN UP</a>
+            <a href="english_register.html" class="btn btn-danger btn-rounded">SIGN UP</a>
           </li>
         </ul>       
         <hr>
