--- a/english_index.html
+++ b/english_index.html
@@ -118,9 +118,9 @@
                             <h1>IRON GYM <br> GYM FOR<br> <span id="js-rotating" style="color:#F48B07">BEGINNERS AND RECREATIONALISTS, PROFESSIONALS AND COMPETITORS </span></h1>
                             <p class="p-large">
                                 Take responsibility for your body. The key to life change is consistency, the key to consistency is motivation, and the key to motivation is your goal.</p>
-                                <a href="Treninzi.html"><button type="button" class="btn btn-success">TRAININGS</button></a>
-                                <a href="Nutricionista.html"><button type="button" class="btn btn-danger">NUTRITIONIST</button></a>
-                                <a href="Masaze.html"><button type="button" class="btn btn-warning">MASAGE</button></a>
+                                <a href="english_treninzi.html"><button type="button" class="btn btn-success">TRAININGS</button></a>
+                                <a href="english_nutricionista.html"><button type="button" class="btn btn-danger">NUTRITIONIST</button></a>
+                                <a href="english_masaze.html"><button type="button" class="btn btn-warning">MASAGE</button></a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
