--- a/english_treninzi.html
+++ b/english_treninzi.html
@@ -81,9 +81,9 @@
             <p style="text-align: center;">
                 Yoga distinguishes five basic energies that govern the various activities of the body.</p>
             <p class="lead" style="text-align: center;">
-              <button type="button" class="btn btn-warning" style="text-align: center;" onclick="location.href='YogaPodkategorije.html#HATHA';">Hatha yoga</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='YogaPodkategorije.html#GJANA';">Gjana yоgа</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='YogaPodkategorije.html#KARMA';">Karma yoga</button>
+              <button type="button" class="btn btn-warning" style="text-align: center;" onclick="location.href='english_yogapodkategorije.html#HATHA';">Hatha yoga</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_yogapodkategorije.html#GJANA';">Gjana yоgа</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_yogapodkategorije.html#KARMA';">Karma yoga</button>
             </p>
           </div>
           <div class="jumbotron" style="background-image: url(gym-assets/pilates.jpg)" style="position: relative;">
@@ -95,9 +95,9 @@
             <p style="text-align: center;">
                 It helps to shape your body and make your muscles spindle-shaped.</p>
             <p class="lead" style="text-align: center;">
-              <button type="button" class="btn btn-warning" onclick="location.href='PilatesPodkategorije.html#KLASIKP';">Classic pilates</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='PilatesPodkategorije.html#STOT';">Stot pilates</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='PilatesPodkategorije.html#REFORMER';">Reformer pilates</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_pilatespodkategorije.html#KLASIKP';">Classic pilates</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_pilatespodkategorije.html#STOT';">Stot pilates</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_pilatespodkategorije.html#REFORMER';">Reformer pilates</button>
             </p>
           </div>
           <div class="jumbotron" style="background-image: url(gym-assets/core.jpg)">
@@ -108,9 +108,9 @@
             <p style="text-align: center;">
                 When your core is strong, everyday responsibilities become much easier.</p>
             <p class="lead" style="text-align: center;">
-              <button type="button" class="btn btn-warning" onclick="location.href='CorePodkategorije.html#KLASIKC';">Classic core</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='CorePodkategorije.html#HIIT';">HIIT</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='CorePodkategorije.html#KRUZNI';">Circled core</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_corepodkategorije.html#KLASIKC';">Classic core</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_corepodkategorije.html#HIIT';">HIIT</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_corepodkategorije.html#KRUZNI';">Circled core</button>
             </p>
           </div>
           <div class="jumbotron" style="background-image: url(gym-assets/cardio.jpg)">
@@ -122,9 +122,9 @@
             <p style="text-align: center;">
                 Cardio exercises speed up your metabolism, strengthen your heart and lungs, and reduce your resting heart rate.</p>
             <p class="lead" style="text-align: center;">
-              <button type="button" class="btn btn-warning" onclick="location.href='CardioPodkategorije.html#TRCANJE';">Treadmill run</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='CardioPodkategorije.html#BICIKL';">Bycicle training</button>
-              <button type="button" class="btn btn-warning" onclick="location.href='CardioPodkategorije.html#STEPENICE';">
+              <button type="button" class="btn btn-warning" onclick="location.href='english_cardiopodkategorije.html#TRCANJE';">Treadmill run</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_cardiopodkategorije.html#BICIKL';">Bycicle training</button>
+              <button type="button" class="btn btn-warning" onclick="location.href='english_cardiopodkategorije.html#STEPENICE';">
                 Stairs training</button>
             </p>
           </div>
