--- a/PilatesPodkategorije.html
+++ b/PilatesPodkategorije.html
@@ -259,6 +259,42 @@
           <a class="right" onclick="nextSlides(1,1)">❯</a>  
         </div>  
       </div>
+
+      <a href="#TRCANJEvideogalerija2" data-toggle="collapse"><div class="card-header">Video galerija</div></a>
+      <div id="TRCANJEvideogalerija2" class="collapse card-body">
+        <div class="slidercontainer">  
+          <!-- Video -->
+    <div id="preview" class="basic-1" style="background-image: url(gym-assets/indexImages/download-background.jpg);" >
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+
+                  <!-- Video Preview -->
+                  <div class="image-container">
+                      <div class="video-wrapper">
+                          <a id="video2" class="popup-youtube" href="https://www.youtube.com/watch?v=n4I_fmegTRk" data-effect="fadeIn">
+                              <img id="videoimg2" class="img-fluid" src="gym-assets\indexImages\video-frame.jpg" alt="alternative">
+                              <span class="video-play-button">
+                                  <span></span>
+                              </span>
+                          </a>
+                      </div> <!-- end of video-wrapper -->
+                 
+                  </div> <!-- end of image-container -->
+                  <!-- end of video preview -->
+
+              </div> <!-- end of col -->
+          </div> <!-- end of row -->
+      </div> <!-- end of container -->
+  </div> <!-- end of basic-1 -->
+  <!-- end of video -->
+
+<!-- Navigation arrows -->  
+<a class="left" onclick="next_Video(-1,2)">❮</a>  
+<a class="right" onclick="next_Video(1,2)">❯</a>  
+        </div>
+      </div>
+
       <a href="#STOTkomentari" data-toggle="collapse"><div class="card-header"><div style="display: inline;">Komentari</div>&nbsp<div data-type="loginAlert" style="display: inline; color: red;">(Ulogujte se kako biste ostavili komentar!)</div></div></a>
       <div id="STOTkomentari" class="collapse card-body">
         <div data-type="komentari" data-training="STOT"></div>
@@ -330,6 +366,42 @@
           <a class="right" onclick="nextSlides(1,2)">❯</a>  
         </div>
       </div>
+
+      <a href="#TRCANJEvideogalerija1" data-toggle="collapse"><div class="card-header">Video galerija</div></a>
+      <div id="TRCANJEvideogalerija1" class="collapse card-body">
+        <div class="slidercontainer">  
+          <!-- Video -->
+    <div id="preview" class="basic-1" style="background-image: url(gym-assets/indexImages/download-background.jpg);" >
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+
+                  <!-- Video Preview -->
+                  <div class="image-container">
+                      <div class="video-wrapper">
+                          <a id="video1" class="popup-youtube" href="https://www.youtube.com/watch?v=n4I_fmegTRk" data-effect="fadeIn">
+                              <img id="videoimg1" class="img-fluid" src="gym-assets\indexImages\video-frame.jpg" alt="alternative">
+                              <span class="video-play-button">
+                                  <span></span>
+                              </span>
+                          </a>
+                      </div> <!-- end of video-wrapper -->
+                 
+                  </div> <!-- end of image-container -->
+                  <!-- end of video preview -->
+
+              </div> <!-- end of col -->
+          </div> <!-- end of row -->
+      </div> <!-- end of container -->
+  </div> <!-- end of basic-1 -->
+  <!-- end of video -->
+
+<!-- Navigation arrows -->  
+<a class="left" onclick="next_Video(-1,1)">❮</a>  
+<a class="right" onclick="next_Video(1,1)">❯</a>  
+        </div>
+      </div>
+
       <a href="#REFORMERkomentari" data-toggle="collapse"><div class="card-header"><div style="display: inline;">Komentari</div>&nbsp<div data-type="loginAlert" style="display: inline; color: red;">(Ulogujte se kako biste ostavili komentar!)</div></div></a>
       <div id="REFORMERkomentari" class="collapse card-body">
         <div data-type="komentari" data-training="REFORMER"></div>
