--- a/english_masaze.html
+++ b/english_masaze.html
@@ -25,7 +25,7 @@
   
     <div class="collapse navbar-collapse" id="navbarColor01" style="background-color: #1D1E22">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="english_index.html">Home page<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
@@ -40,11 +40,11 @@
             </div>            
           </li>
         
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Services</a>
             <div class="dropdown-menu" style="">
               <a class="dropdown-item" href="english_nutricionista.html">Nutritionist</a>
-              <a class="dropdown-item" href="english_masaze.html">Massage</a>
+              <a class="dropdown-item active" href="english_masaze.html">Massage</a>
               <div class="dropdown-divider"></div>
             </div>
           </li>
@@ -307,9 +307,7 @@
                     <li>
                     <a href="english_treninzi.html">List of trainings</a>
                     </li>
-                    <li>
-                    <a href="">My account</a>
-                    </li>
+                   
                     </ul>
                 </div>
             </div>        
@@ -321,7 +319,7 @@
             <h5 class="mb-1">Register for free!</h5>
           </li>
           <li class="list-inline-item">
-            <a href="#!" class="btn btn-danger btn-rounded">SIGN UP</a>
+            <a href="english_register.html" class="btn btn-danger btn-rounded">SIGN UP</a>
           </li>
         </ul>       
         <hr>
