--- a/english_register.html
+++ b/english_register.html
@@ -20,7 +20,7 @@
     
       <div class="collapse navbar-collapse" id="navbarColor01" style="background-color: #1D1E22">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="english_index.html">Home page<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
@@ -55,7 +55,7 @@
           <li class="nav-item">
             <a id="MojNalogDugme" class="nav-link" href="english_MojNalog.html">My account</a>
           </li>
-          <a id="registerButtonRedirect" href="english_Register.html"><button type="button" class="btn btn-outline-danger">REGISTER!</button></a>
+          <a id="registerButtonRedirect" href="english_Register.html"><button type="button" class="btn btn-outline-danger active">REGISTER!</button></a>
          
         </ul>
         <form class="form-inline my-2 my-lg-0">
