type pw ispravljeno

--- a/Register.html
+++ b/Register.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="form-group">
                   <label for="formSurname">PASSWORD</label>
-                  <input type="text" class="form-control" placeholder="Unesite lozinku" id="formpw" style="width: 30%;margin-left: auto;margin-right: auto;">
+                  <input class="form-control" placeholder="Unesite lozinku" id="formpw" type="password" style="width: 30%;margin-left: auto;margin-right: auto;">
                 </div>              
               
                 <button id="registerbtn" type="button" class="btn btn-warning" onclick="register(document.getElementById('formusername').value,document.getElementById('formpw').value)">REGISTRUJ SE!</button>
@@ -119,9 +119,6 @@
                   </li>
                   <li>
                   <a href="Treninzi.html">Lista treninga</a>
-                  </li>
-                  <li>
-                  <a href="">Moj nalog</a>
                   </li>
                   </ul>
               </div>
