--- a/english_register.html
+++ b/english_register.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="form-group">
                   <label for="formSurname">PASSWORD</label>
-                  <input type="text" class="form-control" placeholder="Enter your password" id="formpwen" style="width: 30%;margin-left: auto;margin-right: auto;">
+                  <input type="password" class="form-control" placeholder="Enter your password" id="formpwen" style="width: 30%;margin-left: auto;margin-right: auto;">
                 </div>              
               
                 <button id="registerbtn" type="button" class="btn btn-warning" onclick="register(document.getElementById('formusernameen').value,document.getElementById('formpwen').value)">REGISTER!</button>
